cluster/apps/kyverno/kyverno/policies/apply-ingress-external-dns-annotations.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: apply-ingress-external-dns-annotations
  annotations:
    policies.kyverno.io/title: Apply Ingress External-DNS Annotations
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/description: >-
      This policy creates external-dns annotations on ingresses.
      When the `external-dns.home.arpa/enabled` annotation is `true`
      it applies the external-dns annotations for use with external
      application access.
spec:
  mutateExistingOnPolicyUpdate: true
  generateExistingOnPolicyUpdate: true
  rules:
    - name: external-dns
      match:
        any:
          - resources:
              kinds: ['Ingress']
              annotations:
                external-dns.home.arpa/enabled: 'true'
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(external-dns.alpha.kubernetes.io/target): ipv4.negative7.com
