cluster/apps/kyverno/kyverno/policies/delete-cpu-limits.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: delete-cpu-limits
  annotations:
    policies.kyverno.io/title: Delete CPU limits
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy deletes CPU limits from all Pods.
spec:
  mutateExistingOnPolicyUpdate: true
  generateExistingOnPolicyUpdate: true
  rules:
    - name: delete-cpu-limits
      match:
        any:
          - resources:
              kinds: ['Pod']
      exclude:
        any:
          - resources:
              namespaces:
                - calico-system
                - tigera-operator
          - resources:
              kinds: ['Pod']
              selector:
                matchLabels:
                  job-name: '*'
          - resources:
              kinds: ['Pod']
              selector:
                matchLabels:
                  statefulset.kubernetes.io/pod-name: '*'
          - resources:
              annotations:
                kyverno.io/ignore: 'true'
      mutate:
        patchStrategicMerge:
          spec:
            initContainers:
              - (name): '*'
                resources:
                  limits:
                    cpu: 0
            containers:
              - (name): '*'
                resources:
                  limits:
                    cpu: 0
